--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>jquery-bem</artifactId>
-    <version>d8aa79d</version>
+    <version>0-SNAPSHOT</version>
     <name>jquery-bem</name>
     <description>WebJar for jquery-bem</description>
     <url>http://webjars.org</url>
@@ -47,7 +47,7 @@
         <url>http://github.com/webjars/jquery-bem</url>
         <connection>scm:git:https://github.com/webjars/jquery-bem.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/jquery-bem.git</developerConnection>
-        <tag>jquery-bem-d8aa79d</tag>
+        <tag>HEAD</tag>
     </scm>
     
     <dependencies>
